--- a/apps/api_docs/templates/api_docs/apis.html
+++ b/apps/api_docs/templates/api_docs/apis.html
@@ -41,7 +41,7 @@
 			<article class="api">
 			<p></p>
 			<h4 class="section_title">{{ api_thing.name }}</h4>
-                        {% for method in api_thing.apimethod_set.all %}
+                        {% for method in api_thing.apimethod_set.published %}
 			<section>
                                 <div class="api_heading">
 				<h5 class="{{ method.type }}">{{ method.get_type_display }}</h5>
