--- a/api_docs/templates/api_docs/apis.html
+++ b/api_docs/templates/api_docs/apis.html
@@ -2,7 +2,7 @@
 
 {% block extra_head %}
 
-<script src="{% url stegelman.api_docs.views.build_js %}"></script>
+<script src="{% url api_docs.views.build_js %}"></script>
 
 {% endblock %}
 {% block extra_section %} class="single_page"{% endblock %}
