--- a/api_docs/templates/api_docs/base.html
+++ b/api_docs/templates/api_docs/base.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
+            	<link rel="stylesheet" href="{{ STATIC_URL }}api_docs/css/styles.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+		<script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.0.6/modernizr.min.js"></script>
+                <link href='http://fonts.googleapis.com/css?family=Abel|Rationale' rel='stylesheet' type='text/css'>
 		
                 {% block extra_head %}{% endblock %}
                 
