More updates to the default template.

--- a/api_docs/templates/api_docs/apis.html
+++ b/api_docs/templates/api_docs/apis.html
@@ -7,7 +7,7 @@
 {% endblock %}
 {% block extra_section %} class="single_page"{% endblock %}
 {% block main_content %}
-<h1>Derek.Stegelman.Com.API</h1>
+<h1>Django Interactive API Documentation</h1>
 			<aside>
 			<h2>General API Info</h2>
 			<dl>
@@ -21,10 +21,8 @@
 			</dl>
 			</aside>
 			<article class="api_info">
-				<h2>Philosophy</h2>
-                                <p>I've released several APIs of data from my personal site with
-                                much more to come.  I've got a pretty strong philosophy on API development that
-                                I hope to evangelize and discuss on this site.</p>
+				<h2>Overview</h2>
+                                <p>Default Template.  Can be over-written by making a api_docs/apis.html.</p>
                                 <h3>Formats</h3>
                                 <p>APIs should return JSON by default with XML as an option, but should be
                                 discouraged from use as much as possible.  JSON is faster, and more lightweight than XML,
