Adding more soap support

--- a/api_docs/static/api_docs/css/styles.css
+++ b/api_docs/static/api_docs/css/styles.css
@@ -494,6 +494,11 @@ section.home section article dl
 	color: #fff;
 }
 
+.api .soap
+{
+    background: #CFE1ED;
+}
+
 .single_page .api h4,
 .single_page .api span
 {
