More support for SOAP services.  issue #13.

--- a/api_docs/templates/api_docs/apis.html
+++ b/api_docs/templates/api_docs/apis.html
@@ -82,7 +82,9 @@
                                         {% endfor %}
 					
 					</table>
-                                        
+                    {% if method.method_call %}
+                    <h6>Call: {{ method.method_call }}({% for param in method.parameter.all %}{{ param.name }},{% endfor %})</h6>
+                    {% endif %}
                                         {% endif %}
                                         
                                         
